@@ -3614,6 +3614,7 @@ ScriptSetInteger('CaseFreq', cCaseFactor);
 ScriptSetInteger('MaxCaseDrops', cMaxCaseDrops);
 ScriptSetInteger('HealthCaseProb', cHealthCaseProb);
 ScriptSetInteger('HealthCaseAmount', cHealthCaseAmount);
+ScriptSetInteger('InitHealth', cInitHealth);
 ScriptSetInteger('DamagePercent', cDamagePercent);
 ScriptSetInteger('RopePercent', cRopePercent);
 ScriptSetInteger('MinesNum', cLandMines);
@@ -3647,6 +3648,7 @@ cCaseFactor      := ScriptGetInteger('CaseFreq');
 cMaxCaseDrops    := ScriptGetInteger('MaxCaseDrops');
 cHealthCaseProb  := ScriptGetInteger('HealthCaseProb');
 cHealthCaseAmount:= ScriptGetInteger('HealthCaseAmount');
+cInitHealth      := ScriptGetInteger('InitHealth');
 cDamagePercent   := ScriptGetInteger('DamagePercent');
 cRopePercent     := ScriptGetInteger('RopePercent');
 cLandMines       := ScriptGetInteger('MinesNum');
